# digits

./: Cargo.toml  readme.rm
data/: bin_digits.tnn  digits.tnn
src/: bin_digits_network.rs  digits_network.rs  main.rs  xor_network.rs
src/nural/: activation_fns.rs  activation_layer.rs  dense_layer.rs  loss_fns.rs  mod.rs  nural_network.rs  nural_network_layer.rs  softmax_layer.rs  transform_layer.rs
src/utils/: bin.rs  canvas.rs  matrix.rs  mod.rs  nan.rs
